--- a/fs/fuse/Kconfig
+++ b/fs/fuse/Kconfig
@@ -18,6 +18,16 @@ config FUSE_FS
 	  If you want to develop a userspace FS, or if you want to use
 	  a filesystem based on FUSE, answer Y or M.
 
+
+config CGROUP_FUSE_WRITEBACK
+	bool "enable cgroup fuse writeback control"
+	depends on CGROUP_WRITEBACK
+	default n
+	help
+	  Fuse writeback is controlled by cgroup basis. This feature can be enabled
+	  by echo 1 > /proc/sys/kernel/enable_fuse_cgwb.
+
+
 config CUSE
 	tristate "Character device in Userspace support"
 	depends on FUSE_FS
